avances con el regresor para tiempo de recupero

--- a/unificar.ipynb
+++ b/unificar.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#rob = pd.read_csv('./robo_autos/curados/robados.csv')\n",
@@ -23,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#rob.columns"
@@ -32,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#rec['tramite_fecha'].sort_values()"
@@ -41,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "todo = pd.read_csv('./curados/robos1819_total.csv')"
@@ -50,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "todo.groupby('tramite_tipo')['tramite_fecha'].count()"
@@ -59,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#ver que columnas se pueden dropear (por empezar todo lo que está por código y nombre)\n",
@@ -70,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#dropear columnas de códigos\n",
@@ -82,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -115,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# pasar todo pais nacimiento a upper para unificar\n",
@@ -125,7 +145,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# \"normalizar\" los strings para que las duplicaciones con y sin tildes se unifiquen.\n",
@@ -135,7 +157,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# Tratar casos especiales y cambiar (z franca cdo rivadavia y rivera)\n",
@@ -151,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#todo['automotor_anio_modelo'].unique()\n",
@@ -165,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#todo.groupby('titular_pais_nacimiento')['tramite_tipo'].count().sort_values(ascending= False)\n",
@@ -175,7 +203,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# HACER DESPUES DE DUPLICADOS\n",
@@ -190,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "## 'titular_genero' hay que unificar no identificado y no aplica --> pasa todo a ser No identificado\n",
@@ -201,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "## 'automotor_modelo_descripcion' es imposible. CRUZAR CON EL DE PATENTAMIENTOS Y BUSCAR LAS PRINCIPALES 50 POR REGEX\n",
@@ -210,14 +244,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "----------------------"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### VOY A DROPEAR AHROA MODELO PARA PROBAR (14/10) ACORDARSE DE VOLVERLA SI NO CAMBIA"
    ]
@@ -225,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "todo.drop('automotor_modelo_descripcion', axis= 1, inplace= True)"
@@ -234,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "todo.groupby('tramite_tipo')['tramite_fecha'].count()"
@@ -242,7 +284,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "-----------------------"
    ]
@@ -250,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "## 'automotor_tipo_descripcion' es un bardo, capaz conviene volarla o hacer un serio tratamiento de RegEx\n",
@@ -261,7 +307,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "## 'automotor_marca_descripcion' es enquilombado también pero se puede manejar con un poco de carigno\n",
@@ -271,14 +319,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "--------------------------------------"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## ver como unificar los recuperados con robados"
    ]
@@ -286,7 +338,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "todo.loc[todo['tramite_tipo'] == 'COMUNICACIÓN DE RECUPERO']"
@@ -295,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# buscar filas duplicadas sin tener en cuenta tipo ni fecha. TRATAR DE ENCONTRAR ROBOS Y RECUPEROS DEL MISMO AUTO\n",
@@ -305,7 +361,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# sortear por fecha inscripción para tener juntos mismos autos, modelo en caso que se repita fecha y fecha trámite para que esté primero robo desps recuepro (si saqué modelo usar marca acá)\n",
@@ -315,7 +373,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### recheckear bien qué hay que sacar a mano porque unificando nombres de paises cambia el número"
    ]
@@ -323,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# Checkear manualmente las fechas sospechosas\n",
@@ -333,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# Sacar a mano los \"triplicados\" y denuncias duplicadas (no importa sacar un nuevo robo de acá pq despues modifico sobre el orig) , NO. TENGO QUE SACAR TRIPLICADO PORQUE ME CAMBIA EL DATAFRAME DE DUPLICADOS\n",
@@ -363,7 +427,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -387,7 +453,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# generar columna de indices para el df dupli\n",
@@ -406,7 +474,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# generar columna de indices para el df dupli\n",
@@ -416,7 +486,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#dupli.head(10)"
@@ -425,7 +497,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# reordenar columnas para llevar indice a primero\n",
@@ -437,7 +511,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# generar df accesorio para poder hacer la columna con el shift\n",
@@ -449,7 +525,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#modificar df original y dupli para poder tener las mismas columnas y reemplazar directamente\n",
@@ -461,7 +539,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## HACER UNA COLUMNA QUE SE LLAME DE_ROBO PARA PODER DESPUES BORRAR EN EL DF ORIGINAL AQUELLOS RECUPEROS QUE VIENEN DE ROBO Y DEJAR EL RESTO."
    ]
@@ -469,7 +549,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#dupli.head()"
@@ -478,7 +560,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#updatear las filas en todo con las fechas de recupero\n",
@@ -488,7 +572,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# dropear recuperos en df grande\n",
@@ -498,7 +584,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# cambiar tipo de columnas a fechas (HACER ESTO SI O SI)\n",
@@ -509,7 +597,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# GENERAR LA COLUMNA NUEVA CON LA DIFERENCIA DE DÍAS\n",
@@ -519,7 +609,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -539,7 +631,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -568,7 +662,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -796,7 +892,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# guardar csv\n",
@@ -805,7 +903,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## pruebas, hay que cambiarle antes el nombre a las columnas"
    ]
@@ -813,7 +913,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#todo.sort_values('diff')0\n",
@@ -826,7 +928,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# cambiar tipo de columnas a fechas (HACER ESTO SI O SI)\n",
@@ -837,7 +941,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# GENERAR LA COLUMNA NUEVA CON LA DIFERENCIA DE DÍAS\n",
@@ -848,7 +954,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "Collapsed": "false"
    },
    "outputs": [],
    "source": [
@@ -857,7 +963,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### acomodar todo y agregar columna RECUPERADO, si/no ó 1/0.\n",
     "### ver en qué formato dejar días.\n",
@@ -866,14 +974,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "------------------------"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "# Para checkear fechas triplicadas o erroneas"
    ]
@@ -881,7 +993,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#CREAR DF DE PRUEBA SOLO CON FECHA TRÁMITE Y FECHA ID DE LO QUE ESTÁ DUPLICADO (solo fecha inscripcion)\n",
@@ -891,7 +1005,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#CREAR DF DE PRUEBA SOLO CON FECHA TRÁMITE Y FECHA ID DE LO QUE ESTÁ DUPLICADO\n",
@@ -901,7 +1017,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#CREAR DF DE PRUEBA SOLO CON FECHA TRÁMITE Y FECHA ID DE LO QUE ESTÁ DUPLICADO (habiendo dropeado modelo, gano 10 samples)\n",
@@ -911,7 +1029,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "duplicados.shape"
@@ -920,7 +1040,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "duplicados.head()"
@@ -929,7 +1051,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#prueba1 de stack overflow (https://stackoverflow.com/questions/52084133/pandas-create-new-column-based-on-duplicates)\n",
@@ -943,7 +1067,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "Collapsed": "false"
    },
    "outputs": [],
    "source": [
@@ -954,14 +1078,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "---------------------------------------"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "# CHICHITOS APARTE"
    ]
@@ -969,7 +1097,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# otra opción de stackoverflow (mismo post)\n",
@@ -995,7 +1125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
@@ -1009,7 +1141,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "r"
@@ -1018,7 +1152,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
@@ -1043,5 +1179,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
