--- a/clasficadorSMOTE.ipynb
+++ b/clasficadorSMOTE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Buenos Aires</td>\n",
        "      <td>Nacional</td>\n",
@@ -233,7 +233,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>Buenos Aires</td>\n",
        "      <td>Nacional</td>\n",
@@ -255,7 +255,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>Buenos Aires</td>\n",
        "      <td>Nacional</td>\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "Name: recuperados, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "(array([], dtype=int64), array([], dtype=int64))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -503,20 +503,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Mezclamos el dataset\n",
     "shuffled_df = xtrain.sample(frac=1,random_state=4)\n",
@@ -536,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,9 +545,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
@@ -573,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -611,20 +608,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La proporción de recuperados en la muestra aumentada es 2.0\n"
+      "La proporción de recuperados en la muestra aumentada es 0.3333174565372708\n"
      ]
     }
    ],
    "source": [
-    "print(\"La proporción de recuperados en la muestra aumentada es \" + str(oversampled_trainY.sum()/oversampled_xtrain.shape[0]))"
+    "print(\"La proporción de recuperados en la muestra aumentada es \" + str(oversampled_ytrain.sum()/oversampled_xtrain.shape[0]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a hacer un random forest con el smote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import roc_curve, auc\n",
+    "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "             estimator=RandomForestClassifier(bootstrap=True, class_weight=None,\n",
+       "                                              criterion='gini', max_depth=None,\n",
+       "                                              max_features='auto',\n",
+       "                                              max_leaf_nodes=None,\n",
+       "                                              min_impurity_decrease=0.0,\n",
+       "                                              min_impurity_split=None,\n",
+       "                                              min_samples_leaf=1,\n",
+       "                                              min_samples_split=2,\n",
+       "                                              min_weight_fraction_leaf=0.0,\n",
+       "                                              n_estimators='warn', n_jobs=None,\n",
+       "                                              oob_score=False, random_state=42,\n",
+       "                                              verbose=0, warm_start=False),\n",
+       "             iid='warn', n_jobs=None,\n",
+       "             param_grid={'criterion': ['gini'], 'max_depth': [40],\n",
+       "                         'max_features': ['sqrt', 'log2'],\n",
+       "                         'n_estimators': [20, 50]},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc=RandomForestClassifier(random_state=42)\n",
+    "param_grid = { \n",
+    "    'n_estimators': [20,50],\n",
+    "    'max_features': ['sqrt', 'log2'],\n",
+    "    'max_depth' : [40],\n",
+    "    'criterion' :['gini']\n",
+    "}\n",
+    "CV_rfc = GridSearchCV(estimator=rfc, param_grid=param_grid, cv= 5)\n",
+    "CV_rfc.fit(oversampled_xtrain, oversampled_ytrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'gini',\n",
+       " 'max_depth': 40,\n",
+       " 'max_features': 'sqrt',\n",
+       " 'n_estimators': 50}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CV_rfc.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfc1=RandomForestClassifier(random_state=42, max_features='sqrt', n_estimators= 30, max_depth=40, criterion='gini')\n",
+    "rfc1.fit(oversampled_xtrain, oversampled_ytrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ypred = CV_rfc.predict(xtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[17759   237]\n",
+      " [  437   441]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cm_rf = confusion_matrix(ytest, ypred)\n",
+    "print(cm_rf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -643,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
