Estoy ordenando y comentando clasificadorSMOTE

--- a/clasficadorSMOTE.ipynb
+++ b/clasficadorSMOTE.ipynb
@@ -1,11 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clasifición de recuperados y no recuperados utilizando SMOTE\n",
+    "\n",
+    "A continuación vamos a balancear nuestro dataset (cantidad de autos recuperados vs. no recuperados) subsampleando la clase mayoritaria (autos no recuperados ~95%) y sobresampleando la clase minoritaria (autos recuperados ~5%)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cargamos las librerías\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,16 +32,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_total = pd.read_csv('./curados/ULTIMATE_DATASET.csv')"
+    "# Cargamos los datos y dropeamos NaNs y una columna que quedó de más\n",
+    "data_total = pd.read_csv('./curados/ULTIMATE_DATASET.csv')\n",
+    "data_total.dropna(inplace=True) # Dropeamos NaNs\n",
+    "data_total.drop(['Unnamed: 0'], axis=1, inplace=True) # Dropeamos una columna extra"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DENUNCIA DE ROBO O HURTO    60291\n",
+       "COMUNICACIÓN DE RECUPERO     2961\n",
+       "Name: tramite_tipo, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data_total.dropna(inplace=True)"
+    "# Vemos cuántas denuncias de robo hay (es decir, cuántos no recuperados) y cuántas notificaciones\n",
+    "# de recupero hay (es decir, recuperados)\n",
+    "data_total['tramite_tipo'].value_counts()"
    ]
   },
   {
@@ -40,47 +68,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_total.drop(['Unnamed: 0'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DENUNCIA DE ROBO O HURTO    59986\n",
-       "COMUNICACIÓN DE RECUPERO     2925\n",
-       "Name: tramite_tipo, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_total['tramite_tipo'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#cambio los valores de la columna tramite_tipo apra que robado sea 0 y recuperado 1\n",
-    "data_total['tramite_tipo'] = data_total['tramite_tipo'].map({'DENUNCIA DE ROBO O HURTO': 0, 'COMUNICACIÓN DE RECUPERO': 1})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data_total['tramite_tipo'] = data_total['tramite_tipo'].map({'DENUNCIA DE ROBO O HURTO': 0, \n",
+    "                                                             'COMUNICACIÓN DE RECUPERO': 1})\n",
+    "\n",
+    "# Y cambiamos el nombre de la columna a \"recuperados\" con 0 cuando no están recuperados y 1 cuando\n",
+    "# si fueron recuperados\n",
     "data_total = data_total.rename(columns={'tramite_tipo':'recuperados'})"
    ]
   },
@@ -957,7 +950,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
