mejoramiento de graficos, versiones finales, guardo todo como png para usar en informe

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -688,7 +688,7 @@
     }
    ],
    "source": [
-    "modelo_rel"
+    "modelo_rel #ver bien lo de los modelos del UP (MOVE, HIGH)"
    ]
   },
   {
