--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -90,7 +90,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>DENUNCIA DE ROBO O HURTO</td>\n",
        "      <td>2018-01-17</td>\n",
        "      <td>2000-10-05</td>\n",
@@ -111,7 +111,7 @@
        "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>DENUNCIA DE ROBO O HURTO</td>\n",
        "      <td>2018-01-03</td>\n",
        "      <td>2007-11-22</td>\n",
@@ -132,7 +132,7 @@
        "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>DENUNCIA DE ROBO O HURTO</td>\n",
        "      <td>2018-01-12</td>\n",
        "      <td>1995-02-01</td>\n",
@@ -153,7 +153,7 @@
        "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>DENUNCIA DE ROBO O HURTO</td>\n",
        "      <td>2018-01-02</td>\n",
        "      <td>1999-09-28</td>\n",
@@ -174,7 +174,7 @@
        "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>DENUNCIA DE ROBO O HURTO</td>\n",
        "      <td>2018-01-09</td>\n",
        "      <td>2006-09-07</td>\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "Collapsed": "false"
    },
@@ -276,34 +276,18 @@
     {
      "data": {
       "text/plain": [
-       "tramite_tipo                              object\n",
-       "tramite_fecha                     datetime64[ns]\n",
-       "fecha_inscripcion_inicial         datetime64[ns]\n",
-       "registro_seccional_descripcion            object\n",
-       "registro_seccional_provincia              object\n",
-       "automotor_origen                          object\n",
-       "automotor_anio_modelo                    float64\n",
-       "automotor_tipo_descripcion                object\n",
-       "automotor_marca_descripcion               object\n",
-       "automotor_modelo_descripcion              object\n",
-       "automotor_uso_descripcion                 object\n",
-       "titular_tipo_persona                      object\n",
-       "titular_domicilio_localidad               object\n",
-       "titular_domicilio_provincia               object\n",
-       "titular_genero                            object\n",
-       "titular_anio_nacimiento                  float64\n",
-       "titular_pais_nacimiento                   object\n",
-       "titular_porcentaje_titularidad             int64\n",
-       "dtype: object"
+       "Física      57800\n",
+       "Jurídica     2870\n",
+       "Name: titular_tipo_persona, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "robados.dtypes"
+    "robados['titular_tipo_persona'].value_counts()"
    ]
   },
   {
@@ -2317,7 +2301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
