finiquitado tiempo recuperacion y todo regresión

--- a/tiempo_recu.ipynb
+++ b/tiempo_recu.ipynb
@@ -1949,7 +1949,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "true"
+    "Collapsed": "false"
    },
    "source": [
     "## SVR"
@@ -3149,7 +3149,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "true"
+    "Collapsed": "false"
    },
    "source": [
     "### SVR"
