elimináción de duplicados, descripción de cada notebook

--- a/patentamiento_autos_df_setup.ipynb
+++ b/patentamiento_autos_df_setup.ipynb
@@ -6,6 +6,15 @@
     "Collapsed": "false"
    },
    "source": [
+    "# En este notebook se unifican los datasets de patentamientos por mes en un único dataset, luego requiere limpieza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
     "# Imports"
    ]
   },
@@ -40,15 +49,6 @@
    },
    "source": [
     "## Dataset import and setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": [
-    "## "
    ]
   },
   {
