--- a/relativizar_a_pats.ipynb
+++ b/relativizar_a_pats.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "## Este notebook toma los datos de los autos patentados para poder relativizar los robos de marcas y modelos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
