--- a/robos_regex.ipynb
+++ b/robos_regex.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "# En este notebook se utilizan RegEx para modificar los nombres de las marcas y modelos de autos robados que están escritos de manera diferente"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
