--- a/unificar.ipynb
+++ b/unificar.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "# En este notebook se busca matchear los registros de los autos que fueron recuperados con aquellos que fueron robados para poder calcular tiempo de recupero, etc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
