--- a/unificarpats_robos.ipynb
+++ b/unificarpats_robos.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "# En este notebook se unifican los registros de patentamiento y robos para poder utilizarlos en algún predictor de robos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
